dons_tests/invalid_kxi/bad_return_type_check.kxi
class MyClass {
    static public int func(){
        return 'c';
    }
    static public int func2(){}
    static public void func3(){
        return 1;
    }
}    
void main(){}
